no hash